<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <EditText
        android:id="@+id/project_edit_projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_projectName_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/project_edit_startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/project_startDate_hint" />

        <EditText
            android:id="@+id/project_edit_endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/project_endDate_hint"/>

    </LinearLayout>

    <EditText
        android:id="@+id/project_edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_details_hint"/>

    <Button
        android:id="@+id/project_edit_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/delete_button"/>

</LinearLayout>